# Cpp17-NewFeatures

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Cpp-17NewFeature-01-NestedNameSpace/: CMakeLists.txt  main.cpp
Cpp-17NewFeature-01-NestedNameSpace/doc/: README.txt
Cpp17-NewFeature-01-NestedNameSpace/: main.cpp
Cpp17-NewFeature-02-StructureBinding/: CMakeLists.txt  main.cpp
Cpp17-NewFeature-02-StructureBinding/doc/: README.txt
Cpp17-NewFeature-03-FileSystem/: CMakeLists.txt  main.cpp
Cpp17-NewFeature-04-ExceptionSpecifications/doc/: README.txt
Cpp17-NewFeature-04-Invoke/: CMakeLists.txt  main.cpp
Cpp17-NewFeature-04-Invoke/doc/: README.txt
Cpp17-NewFeature-05-StringView/: CMakeLists.txt  main.cpp
Cpp17-NewFeature-05-StringView/doc/: README.txt
Cpp17-NewFeature-06-BracketInitializer/: CMakeLists.txt  main.cpp
Cpp17-NewFeature-06-BracketInitializer/doc/: README.txt
Cpp17-NewFeature-07-InlineVariables/: CMakeLists.txt  main.cpp
Cpp17-NewFeature-07-InlineVariables/doc/: README.txt
Cpp17-NewFeature-08-LambdaCapturing/: CMakeLists.txt  main.cpp
Cpp17-NewFeature-08-LambdaCapturing/doc/: README.txt
Cpp17-NewFeature-09-FoldExpressions/: CMakeLists.txt  main.cpp
Cpp17-NewFeature-10-TemplateDeduction/: CMakeLists.txt  main.cpp
Cpp17-NewFeature-11-DynamicMemoryAllocation/: CMakeLists.txt  main.cpp
Cpp17-NewFeature-12-IFInitial/: CMakeLists.txt  main.cpp
Cpp17-NewFeature-13-ConstexprIF/: CMakeLists.txt  main.cpp
Cpp17-NewFeature-14-Byte/: CMakeLists.txt  main.cpp
Cpp17-NewFeature-15-Variant/: CMakeLists.txt  main.cpp
(+7 files in other folders)
