cmake_minimum_required(VERSION 3.16)
project(Cpp17-NewFeature)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

add_subdirectory(Cpp17-NewFeature-01-NestedNameSpace)
add_subdirectory(Cpp17-NewFeature-02-StructureBinding)
add_subdirectory(Cpp17-NewFeature-03-FileSystem)
add_subdirectory(Cpp17-NewFeature-04-ExceptionSpecifications)
add_subdirectory(Cpp17-NewFeature-05-StringView)

#add_subdirectory(Cpp17-NewFeature-05-FoldExpressions)
#add_subdirectory(Cpp17-NewFeature-06-ExplicitDeduction)
#add_subdirectory(Cpp17-NewFeature-07-InlineVariables)
#add_subdirectory(Cpp17-NewFeature-08-DynamicMemoryAllocation)
#add_subdirectory(Cpp17-NewFeature-09-CopyElision)
#add_subdirectory(Cpp17-NewFeature-10-InitStatement )
